--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "dev": "node dev.js"
   },
   "dependencies": {
+    "chokidar": "^4.0.3",
     "jsdom": "^26.1.0"
   }
 }
