added new topic of cross proeducts in the vectors chapter, also decrease the width of the main box from 85% to 70%, added email in footer

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "build": "node build.js",
-    "dev": "node dev.js"
+    "dev": "node dev.js",
+    "serve": "serve dist"
   },
   "dependencies": {
     "chokidar": "^4.0.3",
-    "jsdom": "^26.1.0"
+    "jsdom": "^26.1.0",
+    "serve": "^14.2.5"
   }
 }
